--- a/TheBulgarianBot.Business/project.json
+++ b/TheBulgarianBot.Business/project.json
@@ -1,14 +1,16 @@
 {
   "version": "1.0.0-*",
-
   "dependencies": {
     "NETStandard.Library": "1.6.0",
+    "StyleCop.Analyzers": "1.0.0",
     "Telegram.Bot": "10.4.0"
   },
-
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50"
     }
+  },
+  "buildOptions": {
+    "xmlDoc": true
   }
 }
