added photo replies added rakia picture

--- a/TheBulgarianBot.Business/project.json
+++ b/TheBulgarianBot.Business/project.json
@@ -11,6 +11,9 @@
     }
   },
   "buildOptions": {
-    "xmlDoc": true
+    "xmlDoc": true,
+    "embed": {
+      "includeFiles": [ "../Resource/rakia.png" ]
+    }
   }
 }
