--- a/TheBulgarianBot.Application/project.json
+++ b/TheBulgarianBot.Application/project.json
@@ -7,7 +7,6 @@
 
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "type": "platform",
       "version": "1.0.1"
     },
     "StyleCop.Analyzers": "1.0.0",
@@ -18,5 +17,8 @@
     "netcoreapp1.0": {
       "imports": "dnxcore50"
     }
+  },
+  "runtimes": {
+    "win10-x64": {}
   }
 }
