improved regexes added hitler picture

--- a/TheBulgarianBot.Business/project.json
+++ b/TheBulgarianBot.Business/project.json
@@ -16,7 +16,8 @@
     "embed": {
       "includeFiles": [
         "Resource/rakia.png",
-        "Resource/bulgaria.jpg"
+        "Resource/bulgaria.jpg",
+        "Resource/hitler.jpg"
       ]
     }
   },
