--- a/TheBulgarianBot.Business/project.json
+++ b/TheBulgarianBot.Business/project.json
@@ -4,7 +4,8 @@
     "NETStandard.Library": "1.6.0",
     "Microsoft.CSharp": "4.0.1",
     "StyleCop.Analyzers": "1.0.0",
-    "Telegram.Bot": "10.4.0"
+    "Telegram.Bot": "10.4.0",
+    "CoreCompat.System.Drawing": "1.0.0-beta006"
   },
   "frameworks": {
     "netstandard1.6": {
