--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,5 +10,5 @@ pipelines:
     - step:
         script: # Modify the commands below to build your repository.
           - dotnet restore
-          - dotnet build TheBulgarianBot\TheBulgarianBot.Application\project.json
+          - dotnet build TheBulgarianBot/TheBulgarianBot.Application/project.json
 #          - dotnet test TestName
