--- a/Dockerfile-pi
+++ b/Dockerfile-pi
@@ -13,7 +13,8 @@ COPY TheBulgarianBot.Business/. ./TheBulgarianBot.Business/
 WORKDIR /app/TheBulgarianBot.Application
 RUN dotnet publish -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1 AS runtime
+
+FROM mcr.microsoft.com/dotnet/core/runtime:3.1-buster-slim-arm32v7 AS runtime
 
 RUN apt-get update \
     && apt-get install -y --allow-unauthenticated \
