--- a/TheBulgarianBot.Application/appsettings.json
+++ b/TheBulgarianBot.Application/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "BotToken": "302251638:AAF2FAcJomslmYVI_j6kTLEpyd5NjriNmyU"
 }
