--- a/TheBulgarianBot.Business/TheBulgarianBot.Business.csproj
+++ b/TheBulgarianBot.Business/TheBulgarianBot.Business.csproj
@@ -14,10 +14,13 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <WarningsAsErrors />
+    <NoWarn>1701;1702;SA1633;SA1135</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <WarningsAsErrors />
+    <DebugType></DebugType>
+    <NoWarn>1701;1702;SA1633;SA1135</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
