--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,12 +3,12 @@
 # Only use spaces to indent your .yml configuration.
 # -----
 # You can specify a custom docker image from Docker Hub as your build environment.
-image: microsoft/dotnet:onbuild
+#image: microsoft/dotnet:onbuild
 
 pipelines:
   default:
     - step:
         script: # Modify the commands below to build your repository.
-          - dotnet restore
-          - dotnet build TheBulgarianBot/TheBulgarianBot.Application/project.json
-#          - dotnet test TestName
+          - docker build -t thebulgarianbot .
+        services:
+          - docker
