implemented generala command

--- a/Dockerfile-pi
+++ b/Dockerfile-pi
@@ -28,4 +28,6 @@ ENV ASPNETCORE_ENVIRONMENT "Development"
 WORKDIR /app
 COPY --from=build /app/TheBulgarianBot.Application/out ./
 
+COPY images/. ./images
+
 ENTRYPOINT ["dotnet", "TheBulgarianBot.Application.dll"]
