--- a/TheBulgarianBot.Application/appsettings.json
+++ b/TheBulgarianBot.Application/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "BotToken": "302251638:AAF2FAcJomslmYVI_j6kTLEpyd5NjriNmyU"
+  "BotToken": "302251638:AAF2FAcJomslmYVI_j6kTLEpyd5NjriNmyU",
+  "ImagesFolder": "/app/images"
 }
