--- a/TheBulgarianBot.Business/TheBulgarianBot.Business.csproj
+++ b/TheBulgarianBot.Business/TheBulgarianBot.Business.csproj
@@ -32,11 +32,14 @@
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118"><IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 <PrivateAssets>all</PrivateAssets>
 </PackageReference>
-    <PackageReference Include="Telegram.Bot" Version="15.4.0" />
+    <PackageReference Include="Telegram.Bot" Version="15.5.1" />
     <PackageReference Include="CoreCompat.System.Drawing" Version="1.0.0-beta006" />
     <PackageReference Include="System.Threading.ThreadPool" Version="4.3.0" />
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Message\GeneralaCommand\" />
+  </ItemGroup>
 </Project>
