--- a/TheBulgarianBot.Application/TheBulgarianBot.Application.csproj
+++ b/TheBulgarianBot.Application/TheBulgarianBot.Application.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>dotnet-TheBulgarianBot.Application-201F3BB8-6428-4090-B978-1400421A87F2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TheBulgarianBot.Business\TheBulgarianBot.Business.csproj" />
