--- a/TheBulgarianBot.Business/TheBulgarianBot.Business.csproj
+++ b/TheBulgarianBot.Business/TheBulgarianBot.Business.csproj
@@ -32,14 +32,17 @@
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118"><IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 <PrivateAssets>all</PrivateAssets>
 </PackageReference>
-    <PackageReference Include="Telegram.Bot" Version="15.5.1" />
-    <PackageReference Include="CoreCompat.System.Drawing" Version="1.0.0-beta006" />
+    <PackageReference Include="Telegram.Bot" Version="16.0.2" />
     <PackageReference Include="System.Threading.ThreadPool" Version="4.3.0" />
-    <PackageReference Include="Serilog" Version="2.9.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Message\GeneralaCommand\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="System.Drawing.Common" />
   </ItemGroup>
 </Project>
