remove token and update to .NET 7
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/TheBulgarianBot.Application/Properties/launchSettings.json
+++ b/TheBulgarianBot.Application/Properties/launchSettings.json
@@ -3,10 +3,11 @@
     "TheBulgarianBot.Application": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "http://localhost:5001/",
       "environmentVariables": {
-        "DOTNET_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:5001/"
+        "DOTNET_ENVIRONMENT": "Development",
+        "DYLD_LIBRARY_PATH": "/opt/homebrew/lib"
+      }
     }
   }
 }
